==> loboris/MICO/Platform/MCU/LPC5410x/peripherals/platform_uart.c <==
#include "mico_platform.h"
#include "mico_rtos.h"
#include "platform.h"
#include "platform_peripheral.h"
#include "chip.h"
#include "debug.h"

OSStatus platform_uart_init( platform_uart_driver_t* driver, const platform_uart_t* peripheral, const platform_uart_config_t* config, ring_buffer_t* optional_ring_buffer )
{
	OSStatus          err = kNoErr;

	platform_mcu_powersave_disable();

	require_action_quiet( ( driver != NULL ) && ( peripheral != NULL ) && ( config != NULL ), exit, err = kParamErr);
	require_action_quiet( (optional_ring_buffer == NULL) || ((optional_ring_buffer->buffer != NULL ) && (optional_ring_buffer->size != 0)), exit, err = kParamErr);

	_prvInitDataStructure(driver, peripheral, config);

	/* Setup ring buffer */
	if ( optional_ring_buffer != NULL )
	{
		/* Note that the ring_buffer should've been initialised first */
		driver->pRxRing = optional_ring_buffer;
	}

	err = _prvInitUartHw(driver, peripheral, config);

	if (err != kNoErr)
		goto exit;


exit:
	MicoMcuPowerSaveConfig(true);
	return err;
}

OSStatus platform_uart_deinit( platform_uart_driver_t* driver )
{
	OSStatus          err = kNoErr;
	LPC_USART_T *pUSART;
	uint32_t bvUSART;

	platform_mcu_powersave_disable();

	require_action_quiet( ( driver != NULL ), exit, err = kParamErr);

	// >>> put USART in reset mode
	pUSART = driver->peripheral->port;
	if (pUSART == LPC_USART0) {
		bvUSART = 1UL<<1;
	} else if (pUSART == LPC_USART1) {
		bvUSART = 1UL<<2;
	} else if (pUSART == LPC_USART2) {
		bvUSART = 1UL<<3;
	} else if (pUSART == LPC_USART3) {
		bvUSART = 1UL<<4;
	}

	g_pASys->ASYNCAPBCLKCTRLCLR = bvUSART;
	g_pASys->ASYNCPRESETCTRLSET = bvUSART;
	// <<<

	// >>> release s/w resources
	#ifndef NO_MICO_RTOS
	  mico_rtos_deinit_semaphore( &driver->rx_complete );
	  mico_rtos_deinit_semaphore( &driver->tx_complete );
	  mico_rtos_deinit_mutex( &driver->tx_mutex );
	#else
	  driver->rx_complete = false;
	  driver->tx_complete = false;
	#endif
	  driver->rx_size              = 0;
	  driver->tx_size              = 0;
	  driver->last_transmit_result = kNoErr;
	  driver->last_receive_result  = kNoErr;
	// <<<

exit:
	platform_mcu_powersave_enable();
	return err;
}

OSStatus platform_uart_transmit_bytes( platform_uart_driver_t* driver, const uint8_t* data_out, uint32_t size )
{
	OSStatus err = kNoErr;

	platform_mcu_powersave_disable();

#ifndef NO_MICO_RTOS
	mico_rtos_lock_mutex( &driver->tx_mutex );
#endif

	require_action_quiet( ( driver != NULL ) && ( data_out != NULL ) && ( size != 0 ), exit, err = kParamErr);

	/* Init DMA parameters and variables */
	driver->last_transmit_result                    = kGeneralErr;
	driver->tx_size                                 = size;

	if (driver->peripheral->hwNdx == 0) {
		Chip_UART_ClearStatus(LPC_USART0, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);
		Chip_DMA_InitChannel( DMAREQ_UART0_TX, DMA_ADDR(data_out), DMA_XFERCFG_SRCINC_1,
			DMA_ADDR(&LPC_USART0->TXDATA), DMA_XFERCFG_DSTINC_0, WIDTH_8_BITS,
			size, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
		Chip_DMA_StartTransfer(DMAREQ_UART0_TX, DMA_XFERCFG_SRCINC_1, DMA_XFERCFG_DSTINC_0, DMA_XFERCFG_WIDTH_8, size);
	}
	else if (driver->peripheral->hwNdx == 1)
	{
		Chip_UART_ClearStatus(LPC_USART1, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);
		Chip_DMA_InitChannel( DMAREQ_UART1_TX, DMA_ADDR(data_out), DMA_XFERCFG_SRCINC_1,
			DMA_ADDR(&LPC_USART1->TXDATA), DMA_XFERCFG_DSTINC_0, WIDTH_8_BITS,
						size, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
		Chip_DMA_StartTransfer(DMAREQ_UART1_TX, DMA_XFERCFG_SRCINC_1, DMA_XFERCFG_DSTINC_0, DMA_XFERCFG_WIDTH_8, size);
	}
	else if (driver->peripheral->hwNdx == 2)
	{
		Chip_UART_ClearStatus(LPC_USART2, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);
		Chip_DMA_InitChannel( DMAREQ_UART2_TX, DMA_ADDR(data_out), DMA_XFERCFG_SRCINC_1,
			DMA_ADDR(&LPC_USART2->TXDATA), DMA_XFERCFG_DSTINC_0, WIDTH_8_BITS,
			size, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
		Chip_DMA_StartTransfer(DMAREQ_UART2_TX, DMA_XFERCFG_SRCINC_1, DMA_XFERCFG_DSTINC_0, DMA_XFERCFG_WIDTH_8, size);
	}
	else if (driver->peripheral->hwNdx == 3)
	{
		Chip_UART_ClearStatus(LPC_USART3, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);
		Chip_DMA_InitChannel( DMAREQ_UART3_TX, DMA_ADDR(data_out), DMA_XFERCFG_SRCINC_1,
			DMA_ADDR(&LPC_USART3->TXDATA), DMA_XFERCFG_DSTINC_0, WIDTH_8_BITS,
			size, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
		Chip_DMA_StartTransfer(DMAREQ_UART3_TX, DMA_XFERCFG_SRCINC_1, DMA_XFERCFG_DSTINC_0, DMA_XFERCFG_WIDTH_8, size);
	}
	/* Wait for transmission complete */
#ifndef NO_MICO_RTOS
	mico_rtos_get_semaphore( &driver->tx_complete, MICO_NEVER_TIMEOUT );
#else
	while( driver->tx_complete == false )
		__WFI();
	driver->tx_complete = false;
#endif

	driver->tx_size = 0;
	err = driver->last_transmit_result;

exit:
#ifndef NO_MICO_RTOS
	mico_rtos_unlock_mutex( &driver->tx_mutex );
#endif
	platform_mcu_powersave_enable();
	return err;
}

OSStatus platform_uart_receive_bytes( platform_uart_driver_t* driver, uint8_t* pRxBuf, uint32_t c1ToRx, uint32_t timeout_ms )
{
	OSStatus err = kNoErr;
	ring_buffer_t *pRing = driver->pRxRing;
	//platform_mcu_powersave_disable();

	require_action_quiet( ( driver != NULL ) && ( pRxBuf != NULL ) && ( c1ToRx != 0 ), exit, err = kParamErr);
	require_action_quiet( (c1ToRx <= driver->pRxRing->size - BUFFER_MARGIN), exit, err = kSizeErr);

	if (pRing != NULL)
	{
		uint32_t bufFillCnt;

		disable_interrupts();
		bufFillCnt = ring_buffer_used_space(pRing);
		if (bufFillCnt >= c1ToRx)
		{
			enable_interrupts();
			_prvRingBufReadAndConsume(pRing, pRxBuf, c1ToRx);
			err = kNoErr;
		}
		else
		{
			// buffer contains less bytes than wanted, drain the buffer at first
			driver->bufFillThsld = c1ToRx;
			enable_interrupts();

			#ifndef NO_MICO_RTOS
				err = mico_rtos_get_semaphore(&driver->rx_complete, timeout_ms);
			#else
				driver->rx_complete = false;
                                int delay_start = mico_get_time_no_os();
                                while(driver->rx_complete == false){
                                  if(mico_get_time_no_os() >= delay_start + timeout_ms && timeout_ms != MICO_NEVER_TIMEOUT){
                                    driver->rx_size = 0;
                                    err = kTimeoutErr;
                                    goto exit;
                                  }
                                }
                                driver->rx_size = 0;
			#endif

			// we assume asked size is <= ring buffer size
			if (err == kNoErr) {
				_prvRingBufReadAndConsume(pRing, pRxBuf, c1ToRx);
			}else{
				// we return no data if there are error

			}

		}

	}
	else
	{
		IRQn_Type irqNdx = (IRQn_Type) driver->peripheral->irqNdx;
		NVIC_DisableIRQ(irqNdx);
		driver->pBuf = pRxBuf;
		driver->pBufEnd = pRxBuf + c1ToRx;
		NVIC_EnableIRQ(irqNdx);

		#ifndef NO_MICO_RTOS
			err = mico_rtos_get_semaphore(driver->rx_complete, timeout_ms);
		#else
				while (!driver->rx_complete)
					__WFI();
		#endif

		NVIC_DisableIRQ(irqNdx);
		driver->pBuf = driver->pBufEnd = 0;

	}
exit:
	//platform_mcu_powersave_enable();
	return err;
}
